--- a/greenAgent/pyproject.toml
+++ b/greenAgent/pyproject.toml
@@ -9,4 +9,13 @@ dependencies = [
     "agentbeats>=1.2.6",
     "uuid>=1.30",
     "uvicorn>=0.38.0",
+    "pydantic>=2.0.0",
+    "httpx>=0.27.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-cov>=4.1.0",
 ]
